# jigsaw-solver

./: .gitignore  Makefile  Pipfile  gui.py  guiv2.ui  puzzle.py  pyproject.toml  readme  readme.md  splitter.py
